# llm-debate

./: .env.example  .gitignore  Dockerfile.python  Dockerfile.web  README.md  alembic.ini  docker-compose.host.yml  docker-compose.yml  mypy.ini  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_debates_and_turns.py  0002_add_debate_cursor_and_turn_uniqueness.py  0003_create_debate_presets.py  0004_drop_debate_presets.py
apps/api/: README.md
apps/web/: README.md  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: LanguageSwitcher.tsx
apps/web/lib/: api.ts  i18n.tsx
apps/worker/: README.md
openspec/: project.md
openspec/specs/debate-runtime/: spec.md
openspec/specs/event-streaming/: spec.md
openspec/specs/llm-provider-deepseek/: spec.md
openspec/specs/local-development/: spec.md
openspec/specs/repo-structure/: spec.md
openspec/specs/web-ui/: spec.md
scripts/: dev_reset_db.sh  smoke_e2e.py
src/llm_debate/: __init__.py
src/llm_debate/api/: deps.py  main.py  schemas.py
src/llm_debate/core/: settings.py  time.py
src/llm_debate/db/: engine.py  models.py  turn_writes.py
src/llm_debate/llm/: deepseek.py
src/llm_debate/prompts/: __init__.py
src/llm_debate/runtime/: __init__.py  cursor.py  model_select.py  prompts.py  status.py  steps.py
src/llm_debate/worker/: celery_app.py  tasks.py
tests/: test_api_schemas.py  test_cursor.py  test_model_select.py  test_prompt_templates.py  test_runtime_steps.py  test_status.py  test_turn_writes.py
(+42 files in other folders)
